--- a/fee.html
+++ b/fee.html
@@ -31,59 +31,63 @@
   <!-- Add your site or application content here -->
 
   <!--  Navbar  -->
-<div class="container-fluid">
-  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="index.html">
-    <img src="img/icon_katayama2.png" width="30" height="30" class="d-inline-block align-top" alt="">
-    <strong><span class="text-green"><span class="text-red">弁護士の</span>退職代行</span></strong>
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  <div class="container-fluid">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="index.html">
+      <img src="img/icon_katayama2.png" width="30" height="30" class="d-inline-block align-top" alt="">
+      <strong><span class="text-green"><span class="text-red">退職代行</span>by弁護士</span></strong>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">
-              HOME
-            <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="procedure.html"> 退職までのステップ </a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              運営事務所
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="about.html">弁護士について</a>
-              <a class="dropdown-item" href="map.html">地　図</a>
-          </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="fee.html"> 料　金 </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="payment.html"> お支払い方法 </a>
-          </li>
-        </ul>
-    </div>
-  </nav>
-</div>
-<!--  END Navbar  -->
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">
+                HOME
+              <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="procedure.html" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 退職までのステップ </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
+                <a class="dropdown-item" href="procedure.html">全体のながれ</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="consultation.html">相　談</a>
+                <a class="dropdown-item" href="agreement.html">契　約</a>
+                <a class="dropdown-item" href="payment.html">お支払い</a>
+              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                運営事務所
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="about.html">弁護士について</a>
+                <a class="dropdown-item" href="map.html">地　図</a>
+              </div>
+            </li>
 
-<div class="container">
-<!--  Test PayPal  -->
-<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="P84NCNWJ8GEGG">
-<input type="image" src="https://www.paypalobjects.com/ja_JP/JP/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - オンラインでより安全・簡単にお支払い">
-<img alt="" border="0" src="https://www.paypalobjects.com/ja_JP/i/scr/pixel.gif" width="1" height="1">
-</form>
-<!--  End Test PayPal  -->
-</div>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                料　金
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown3">
+                <a class="dropdown-item active" href="fee.html">料　金</a>
+                <a class="dropdown-item" href="payment.html">お支払い方法</a>
+              </div>
+            </li>
 
-
-
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="about.html">弁護士について</a>
+                <a class="dropdown-item" href="map.html">地　図</a>
+              </div>
+            </li>
+          </ul>
+      </div>
+    </nav>
+  </div>
+  <!--  END Navbar  -->
 
 
 <!--  Content  -->
@@ -131,7 +135,7 @@
         <p class="h5 text-center"><strong>但し、最低金額２５万円（税別）</strong></p>
       </div>
       <div class="p-2 bg-teal text-white fee-sm-box">
-        <p class="pt-2 ml-2 mr-2">退職代行サービスをご依頼いただいた方は、上記の特別料金で、弁護士が会社と交渉いたします。なお、訴訟に移行する場合は、ふんたらかんたらふんたらかんたら</p>
+        <p class="pt-2 ml-2 mr-2">退職代行サービスをご依頼いただいた方は、上記の料金で、弁護士が会社と交渉いたします。</p>
       </div>
     </div>
   </div>
@@ -155,7 +159,7 @@
         <p class="text-center">メールで相談</p>
       </a>
     </div>
-    <div class="col-sm text-center bg-blue text-white a-white">
+    <div class="col-sm text-center bg-teal text-white a-white">
       <a href="tel:05031880970">
         <span style="font-size: 2em; color: Tomato;">
           <i class="fas fa-phone"></i>
