--- a/index.html
+++ b/index.html
@@ -2,25 +2,29 @@
 <html class="no-js" lang="ja">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>弁護士の退職代行 | 静岡の弁護士による退職代行サービス</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>弁護士の退職代行 | 静岡の弁護士による退職代行サービス</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" href="icon.png">
+    <!-- Place favicon.ico in the root directory -->
 
-  <!--  BootstrapCDN  -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <!--  End BootstrapCDN  -->
+    <!--  BootstrapCDN  -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!--  End BootstrapCDN  -->
 
-  <!--  Fontawesome  -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-<!--  End Fontawesome  -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+    <!--  Fontawesome  -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+  　<!--  End Fontawesome  -->
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
+
+    <!-- Start of katayama-law Zendesk Widget script -->
+<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=fd9ab3a8-925e-40a2-a49e-2deed8663ff6"> </script>
+<!-- End of katayama-law Zendesk Widget script -->
 </head>
 
 <body>
@@ -91,7 +95,7 @@
 
 <div class="jumbotron bg-green">
 <div class="container">
-  <h1 class="display-4 text-white">弁護士の退職代行</h1>
+  <h1 class="display-4 text-white"><strong>弁護士の退職代行</strong></h1>
   <p class=" text-white h2">弁護士　片山ひでのり</p>
   <hr class="my-4">
   <p class="text-white">会社とのやりとりは全て弁護士が引き受けます。あなたが会社と話す必要はありません。</p>
@@ -108,39 +112,34 @@
 </div>
 <div class="container-fluid bg-darkolivegreen">
   <div class="container">
-  <h1 class="text-white p-3">退職代行を弁護士に依頼するメリット</h1>
+  <h1 class="text-white p-3">弁護士に依頼するメリット</h1>
   </div>
 </div>
-  <div class="row">
-    <div class="col-sm-4">
-      <div class="card">
-        <h4 class="card-header">会社との交渉ができる</h4>
-        <div class="card-body">
-          <p class="card-text">弁護士ではない業者は、あなたに変わって会社と交渉することができません。できるのは、ただ書類を提出したり、伝言を伝えたりするだけです。業者があなたの代わりに交渉することは弁護士法違反に当たるからです。</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="card">
-        <h4 class="card-header">未払い賃金の請求もできる</h4>
-        <div class="card-body">
-          <p class="card-text">働いた分の賃金を払わないのは、当然違法です。未払い賃金は、弁護士から会社に交渉して請求することができます。弁護士でない業者はあなたに変わって未払い賃金を請求することはできません。</p>
+<div class="container">
+  <p>弁護士ではない業者は、あなたに変わって会社と交渉することができません。できるのは、ただ書類を提出したり、伝言を伝えたりするだけです。業者があなたの代わりに交渉することは弁護士法違反に当たるからです。</p>
+</div>
 
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="card">
-        <h4 class="card-header">損害賠償の交渉もできる</h4>
-        <div class="card-body">
-          <p class="card-text">退職したいと会社に伝えると、今までのミスを補填しろと、損害賠償請求をされる場合があります。この場合も、弁護士は会社と交渉に当たることができますが、弁護士でない業者は交渉することはできません。</p>
 
-        </div>
-      </div>
+  <!--  Form  -->
+<div class="container p-3 bg-green text-white">
+  <h1>お問い合わせフォーム</h1>
+  <form method="post" action="mail.php">
+    <div class="form-group">
+      <label for="name">お名前（フルネーム）</label>
+      <input name="お名前" type="text" class="form-control" id="name" placeholder="お名前（フルネーム）" required>
     </div>
+    <div class="form-group">
+      <label for="exampleInputEmail1">メールアドレス</label>
+      <input name="Email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="メールアドレス" required>
+    </div>
+    <div class="form-group">
+    <label for="exampleFormControlTextarea1">お問い合わせ内容</label>
+    <textarea name="お問い合わせ内容" class="form-control" id="exampleFormControlTextarea1" rows="5" placeholder="お問い合わせ内容" required></textarea>
   </div>
-
-
+    <button type="submit" class="btn btn-primary">送信する</button>
+  </form>
+</div>
+  <!-- End Form  -->
 
 
   <!--  Footer  -->
@@ -160,7 +159,7 @@
           <p class="text-center">メールで相談</p>
         </a>
       </div>
-      <div class="col-sm text-center bg-blue text-white a-white">
+      <div class="col-sm text-center bg-teal text-white a-white">
         <a href="tel:05031880970">
           <span style="font-size: 2em; color: Tomato;">
             <i class="fas fa-phone"></i>
