--- a/map.html
+++ b/map.html
@@ -29,47 +29,66 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <!--  Navbar  -->
-<div class="container-fluid">
-  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="index.html">
-    <img src="img/icon_katayama2.png" width="30" height="30" class="d-inline-block align-top" alt="">
-    <strong><span class="text-green"><span class="text-red">弁護士の</span>退職代行</span></strong>
-    </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+<!--  Contents  -->
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">
-              HOME
-            <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="procedure.html"> 退職までのステップ </a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              運営事務所
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="about.html">弁護士について</a>
-              <a class="dropdown-item active" href="map.html">地　図</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="fee.html"> 料　金 </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="payment.html"> お支払い方法 </a>
-          </li>
-        </ul>
-    </div>
-  </nav>
+<!--  Navbar  -->
+<div class="container-fluid">
+<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="index.html">
+  <img src="img/icon_katayama2.png" width="30" height="30" class="d-inline-block align-top" alt="">
+  <strong><span class="text-green"><span class="text-red">退職代行</span>by弁護士</span></strong>
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">
+            HOME
+          <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="procedure.html" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 退職までのステップ </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
+            <a class="dropdown-item" href="procedure.html">全体のながれ</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="consultation.html">相　談</a>
+            <a class="dropdown-item" href="agreement.html">契　約</a>
+            <a class="dropdown-item" href="payment.html">お支払い</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            運営事務所
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="about.html">弁護士について</a>
+            <a class="dropdown-item active" href="map.html">地　図</a>
+          </div>
+        </li>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            料　金
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown3">
+            <a class="dropdown-item" href="fee.html">料　金</a>
+            <a class="dropdown-item" href="payment.html">お支払い方法</a>
+          </div>
+        </li>
+
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="about.html">弁護士について</a>
+            <a class="dropdown-item" href="map.html">地　図</a>
+          </div>
+        </li>
+      </ul>
+  </div>
+</nav>
 </div>
 <!--  END Navbar  -->
-<!--  Contents  -->
 
 <div class="container-fluid">
   <h1 class="text-center text-white bg-green   p-5 border-bottom mb-5">片山ひでのり法律事務所</h1>
@@ -122,7 +141,7 @@
             <p class="text-center">メールで相談</p>
           </a>
         </div>
-        <div class="col-sm text-center bg-blue text-white a-white">
+        <div class="col-sm text-center bg-teal text-white a-white">
           <a href="tel:05031880970">
             <span style="font-size: 2em; color: Tomato;">
               <i class="fas fa-phone"></i>
