--- a/thanks.html
+++ b/thanks.html
@@ -2,31 +2,29 @@
 <html class="no-js" lang="ja">
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>consultation</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Thanks</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" href="icon.png">
+    <!-- Place favicon.ico in the root directory -->
 
-  <!--  BootstrapCDN  -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <!--  End BootstrapCDN  -->
+    <!--  BootstrapCDN  -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!--  End BootstrapCDN  -->
 
-  <!--  Fontawesome  -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-<!--  End Fontawesome  -->
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+    <!--  Fontawesome  -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+  　<!--  End Fontawesome  -->
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
 
-  <!-- Start of katayama-law Zendesk Widget script -->
-<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=fd9ab3a8-925e-40a2-a49e-2deed8663ff6"> </script>
-<!-- End of katayama-law Zendesk Widget script -->
-
-
+    <!-- Start of katayama-law Zendesk Widget script -->
+      <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=fd9ab3a8-925e-40a2-a49e-2deed8663ff6"> </script>
+    <!-- End of katayama-law Zendesk Widget script -->
 </head>
 
 <body>
@@ -37,7 +35,7 @@
   <!-- Add your site or application content here -->
 
   <!--  Navbar  -->
-  <div class="container-fluid">
+<div class="container-fluid">
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="index.html">
     <img src="img/icon_katayama2.png" width="30" height="30" class="d-inline-block align-top" alt="">
@@ -59,7 +57,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
               <a class="dropdown-item" href="procedure.html">全体のながれ</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item active" href="consultation.html">相　談</a>
+              <a class="dropdown-item" href="consultation.html">相　談</a>
               <a class="dropdown-item" href="agreement.html">契　約</a>
               <a class="dropdown-item" href="payment.html">お支払い</a>
             </div>
@@ -92,68 +90,46 @@
         </ul>
     </div>
   </nav>
-  </div>
-  <!--  END Navbar  -->
-
+</div>
+<!--  END Navbar  -->
 <!--  Content  -->
 <div class="container-fluid p-0">
-  <h1 class="text-center text-white bg-teal p-5 mb-0  border-bottom">ご　相　談</h1>
+  <p class="h2 text-center text-white bg-teal p-5 border-bottom mb-5">お問い合わせいただきありがとうございます。</p>
 </div>
-<div class="container-fluid p-4 bg-whitesmoke text-center ">
-  <h2 class="h3 p-2 text-darkslategray"><strong>電話でご相談</strong></h2>
-  <span style="font-size: 2em; color: tomato;" class="pt-2">
-  <i class="fas fa-phone"></i>
-  </span>
-  <span class="h3 text-darkslategray">050-3188-0970</span>
-  <p class="h5 p-2 text-darkslategray">月曜日から金曜日</p>
-  <p class="h5 pb-2 text-darkslategray">午前１０時から午後７時</p>
-  <p class="h5 pb-2 text-darkslategray">土曜日</p>
-  <p class="h5 pb-2 text-darkslategray">午前１０時から午後５時</p>
-</div>
-
-
-
-
-<div class="container-fluid p-4 text-center ">
-  <h2 class="h3 p-2 text-darkslategray"><strong>メールでご相談</h2>
-    <span style="font-size: 2em; color: tomato;" class="pt-2">
-    <i class="fas fa-envelope"></i>
-    </span>
-    <span class="h3"><a href="mailto:quitjob@katayama-law.jp">quitjob@katayama-law.jp</a></span>
-    <p class="text-center m-3">メールアドレスに返信できない場合がありますので、メール本文に、お名前（フルネーム）と携帯電話番号を入れてください。</p>
+<div class="container">
+  <p class="text-center">２、３日経っても連絡がない場合は、恐れ入りますが０５０−３１８８−０９７０までお電話ください。</p>
 
 </div>
 
 
 
-
-<!--  Footer  -->
-<div class="container-fluid mt-4">
-  <div class="row mt-3">
-    <div class="col-sm text-center bg-green text-white a-white">
-        <span style="font-size: 2em; color: #FF7F00;">
-          <i class="fas fa-comments"></i>
-        </span>
-        <p class="text-center">チャットで相談</p>
-    </div>
-    <div class="col-sm text-center bg-secondary text-white a-white">
-      <a href="mailto:info@katayama-law.jp">
-        <span style="font-size: 2em; color: #FF7F00;">
-          <i class="fas fa-envelope"></i>
-        </span>
-        <p class="text-center">メールで相談</p>
-      </a>
-    </div>
-    <div class="col-sm text-center bg-teal text-white a-white">
-      <a href="tel:05031880970">
-        <span style="font-size: 2em; color: Tomato;">
-          <i class="fas fa-phone"></i>
-        </span>
-        <p class="text-center">電話で相談</a></p>
-      </a>
+  <!--  Footer  -->
+  <div class="container-fluid mt-4">
+    <div class="row mt-3">
+      <div class="col-sm text-center bg-green text-white a-white">
+          <span style="font-size: 2em; color: #FF7F00;">
+            <i class="fas fa-comments"></i>
+          </span>
+          <p class="text-center">チャットで相談</p>
+      </div>
+      <div class="col-sm text-center bg-secondary text-white a-white">
+        <a href="mailto:info@katayama-law.jp">
+          <span style="font-size: 2em; color: #FF7F00;">
+            <i class="fas fa-envelope"></i>
+          </span>
+          <p class="text-center">メールで相談</p>
+        </a>
+      </div>
+      <div class="col-sm text-center bg-teal text-white a-white">
+        <a href="tel:05031880970">
+          <span style="font-size: 2em; color: Tomato;">
+            <i class="fas fa-phone"></i>
+          </span>
+          <p class="text-center">電話で相談</a></p>
+        </a>
+      </div>
     </div>
   </div>
-</div>
 <!--  事務所情報  -->
 <footer class="footer">
   <div class="container">
@@ -167,7 +143,6 @@
     </address>
   </div>
 </footer>
-
 
 
 
