--- a/payment.html
+++ b/payment.html
@@ -35,7 +35,7 @@
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="index.html">
     <img src="img/icon_katayama2.png" width="30" height="30" class="d-inline-block align-top" alt="">
-    <strong><span class="text-green"><span class="text-red">弁護士の</span>退職代行</span></strong>
+    <strong><span class="text-green"><span class="text-red">退職代行</span>by弁護士</span></strong>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -48,8 +48,15 @@
               HOME
             <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="procedure.html"> 退職までのステップ </a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="procedure.html" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> 退職までのステップ </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
+              <a class="dropdown-item" href="procedure.html">全体のながれ</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="consultation.html">相　談</a>
+              <a class="dropdown-item" href="agreement.html">契　約</a>
+              <a class="dropdown-item active" href="payment.html">お支払い</a>
+            </div>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -58,12 +65,23 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="about.html">弁護士について</a>
               <a class="dropdown-item" href="map.html">地　図</a>
+            </div>
           </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="fee.html"> 料　金 </a>
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown3" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              料　金
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown3">
+              <a class="dropdown-item" href="fee.html">料　金</a>
+              <a class="dropdown-item" href="payment.html">お支払い方法</a>
+            </div>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="payment.html"> お支払い方法 </a>
+
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="about.html">弁護士について</a>
+              <a class="dropdown-item" href="map.html">地　図</a>
+            </div>
           </li>
         </ul>
     </div>
@@ -71,16 +89,6 @@
 </div>
 <!--  END Navbar  -->
 
-<div class="container">
-<!--  Test PayPal  -->
-<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="P84NCNWJ8GEGG">
-<input type="image" src="https://www.paypalobjects.com/ja_JP/JP/i/btn/btn_buynowCC_LG.gif" border="0" name="submit" alt="PayPal - オンラインでより安全・簡単にお支払い">
-<img alt="" border="0" src="https://www.paypalobjects.com/ja_JP/i/scr/pixel.gif" width="1" height="1">
-</form>
-<!--  End Test PayPal  -->
-</div>
 
 
 
@@ -91,7 +99,55 @@
   <h1 class="text-center text-white p-5 mb-5">お支払い方法</h1>
 </div>
 
+<!--  Flexbox振込 -->
+<div class="container">
+  <div class="d-flex justify-content-center mb-5">
+    <div class="w-75 d-flex flex-column bd-highlight mb-3 fee-box">
+      <div class="p-2 text-center fee-sm-box">
+        <h2 class="p-2 m-2 text-teal">
+          <strong>振　込</strong></h2>
+      </div>
+      <div class="p-2 bg-teal text-white fee-sm-box">
+        <h3 class="h5"><strong>振込先口座</strong></h3>
+      </div>
+      <div class="m-0 bg-teal text-white">
+        <p class="h5 pl-3 pr-3 pb-1 m-0">スルガ銀行　静岡南支店</p>
+      </div>
+      <div class="m-0 bg-teal text-white">
+        <p class="h5 pl-3 pr-3 pb-1 m-0">普通口座</p>
+      </div>
+      <div class="m-0 bg-teal text-white">
+        <p class="h5 pl-3 pr-3 pb-1 m-0">口座番号：２８９３７０６</p>
+      </div>
+      <div class="m-0 bg-teal text-white">
+        <p class="h5 pl-3 pr-3 pb-4 m-0">名義人：カタヤマ　ヒデノリ</p>
+    </div>
+    <div class="m-0 bg-teal text-white">
+      <p class="h5 pl-3 pr-3 pb-4 m-0">＊振込手数料はお客様負担です。</p>
+  </div>
+  </div>
+</div>
+</div>
+<!-- End Flexbox振込 -->
 
+<!--  Flexbox PayPal  -->
+<div class="container mt-2">
+  <div class="d-flex justify-content-center">
+    <div class="w-75 d-flex flex-column bd-highlight mb-3 fee-box">
+      <div class="p-2 text-center fee-sm-box">
+        <h2 class="p-2 m-2 text-teal">
+          <strong>オンライン決済</strong></h2>
+      </div>
+      <div class="p-2 bg-white text-teal fee-sm-box">
+        <h3 class="h5"><strong>クレジットカード・デビットカード・Paypalでのお支払い</strong></h3>
+      </div>
+      <div class="m-0 bg-teal text-white">
+        <p class="h5 p-3">メールアドレスにご請求書を送信します。請求書に記載されたリンクからオンラインでお支払いいただけます。</p>
+      </div>
+  </div>
+</div>
+</div>
+<!-- End Flexbox PayPal -->
 
 <!--  Footer  -->
 <div class="container-fluid mt-4">
@@ -110,7 +166,7 @@
         <p class="text-center">メールで相談</p>
       </a>
     </div>
-    <div class="col-sm text-center bg-blue text-white a-white">
+    <div class="col-sm text-center bg-teal text-white a-white">
       <a href="tel:05031880970">
         <span style="font-size: 2em; color: Tomato;">
           <i class="fas fa-phone"></i>
