--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">
     <img src="img/icon_katayama2.png" width="30" height="30" class="d-inline-block align-top" alt="">
-    <strong><span class="text-green"><span class="text-red">退職代行</span>by弁護士</span></strong>
+    <strong><span class="text-red">弁護士による</span><span class="text-green">退職代行</span></strong>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -93,30 +93,29 @@
 </div>
 <!--  END Navbar  -->
 
-<div class="jumbotron bg-green">
-<div class="container">
-  <h1 class="display-4 text-white"><strong>弁護士の退職代行</strong></h1>
-  <p class=" text-white h2">弁護士　片山ひでのり</p>
-  <hr class="my-4">
-  <p class="text-white">会社とのやりとりは全て弁護士が引き受けます。あなたが会社と話す必要はありません。</p>
-</div>
-</div>
-<div class="text-center">
+
+<div class="text-center mt-10">
   <img src="img/photo/hidenori_cut_stripetie_transparent2.png" class="img-fluid" alt="Responsive image">
 </div>
-<div class="container text-center mt-5">
-  <p class="h5 text-center">弁護士　片山栄範</p>
+<div class="container-fluid text-center bg-light pt-5 pb-5">
+  <p class="text-center h3">会社とのやりとりは全て弁護士が引き受けます。</p>
+  <p class="h5 text-center pt-5">弁護士　片山栄範</p>
   <p class="h5 text-center">（かたやま　ひでのり）</p>
   <p class="h5 text-center">静岡県弁護士会所属</p>
   <p class="h5 text-center">登録番号：４０４５９</p>
 </div>
-<div class="container-fluid bg-darkolivegreen">
+
+<div class="container-floud bg-darkolivegreen">
   <div class="container">
-  <h1 class="text-white p-3">弁護士に依頼するメリット</h1>
+    <div class="d-flex align-items-center flex-row bd-highlight mb-3">
+      <div class="p-3 d-none d-sm-block"><img src="img/qtj-test@3x.png" alt="注意アイコン"></div>
+      <div class="p-3 text-white">
+        <p class="h4 p-3 border-bottom">弁護士ではない業者は、あなたの代わりに会社と交渉することができません。</p>
+        <p class="pt-3 h5">できるのは、会社に書類を送ったり、あなたからの伝言を伝えるだけです。</p>
+        <p class="pt-2 h5">弁護士なら、直接会社とやりとりし、会社と交渉をした上で、退職手続きを進めることができます。</p>
+      </div>
+    </div>
   </div>
-</div>
-<div class="container">
-  <p>弁護士ではない業者は、あなたに変わって会社と交渉することができません。できるのは、ただ書類を提出したり、伝言を伝えたりするだけです。業者があなたの代わりに交渉することは弁護士法違反に当たるからです。</p>
 </div>
 
 
@@ -152,7 +151,7 @@
           <p class="text-center">チャットで相談</p>
       </div>
       <div class="col-sm text-center bg-secondary text-white a-white">
-        <a href="mailto:info@katayama-law.jp">
+        <a href="mailto:quitjob@katayama-law.jp">
           <span style="font-size: 2em; color: #FF7F00;">
             <i class="fas fa-envelope"></i>
           </span>
@@ -160,7 +159,7 @@
         </a>
       </div>
       <div class="col-sm text-center bg-teal text-white a-white">
-        <a href="tel:05031880970">
+        <a href="tel:05036285377">
           <span style="font-size: 2em; color: Tomato;">
             <i class="fas fa-phone"></i>
           </span>
@@ -177,8 +176,8 @@
       <strong>弁護士　片山栄範</strong><br>
       静岡県弁護士会所属　登録番号４０４５９<br>
       〒422-8067　静岡市駿河区南町１３−３ ＴＫビル４階<br>
-      <abbr title="Phone">電話</abbr> <a onclick="return gtag_report_conversion('tel:05031880970');" href="tel:05031880970"> 050-3188-0970 </a><br>
-      </span><a href="mailto:info@katayama-law.jp">info@katayama-law.jp</a>
+      <abbr title="Phone">電話</abbr> <a onclick="return gtag_report_conversion('tel:05036285377');" href="tel:05031880970"> 050-3628-5377 </a><br>
+      </span><a href="mailto:quitjob@katayama-law.jp">quitjob@katayama-law.jp</a>
     </address>
   </div>
 </footer>
