--- a/thanks.html
+++ b/thanks.html
@@ -130,19 +130,19 @@
       </div>
     </div>
   </div>
-<!--  事務所情報  -->
-<footer class="footer">
-  <div class="container">
-    <address class="text-center m-4">
-      <strong>片山ひでのり法律事務所</strong><br>
-      <strong>弁護士　片山栄範</strong><br>
-      静岡県弁護士会所属　登録番号４０４５９<br>
-      〒422-8067　静岡市駿河区南町１３−３ ＴＫビル４階<br>
-      <abbr title="Phone">電話</abbr> <a onclick="return gtag_report_conversion('tel:05031880970');" href="tel:05031880970"> 050-3188-0970 </a><br>
-      </span><a href="mailto:info@katayama-law.jp">info@katayama-law.jp</a>
-    </address>
-  </div>
-</footer>
+  <!--  事務所情報  -->
+  <footer class="footer">
+    <div class="container">
+      <address class="text-center m-4">
+        <strong>片山ひでのり法律事務所</strong><br>
+        <strong>弁護士　片山栄範</strong><br>
+        静岡県弁護士会所属　登録番号４０４５９<br>
+        〒422-8067　静岡市駿河区南町１３−３ ＴＫビル４階<br>
+        <abbr title="Phone">電話</abbr> <a onclick="return gtag_report_conversion('tel:05036285377');" href="tel:05031880970"> 050-3628-5377 </a><br>
+        </span><a href="mailto:quitjob@katayama-law.jp">quitjob@katayama-law.jp</a>
+      </address>
+    </div>
+  </footer>
 
 
 
